# ml-workflow-object-detection-example

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
apps/: app.py
apps/object_detection_demo/: main.py  pyproject.toml  streamlit_utils.py
apps/object_detection_demo/sample_data/: README.md
code/: config_schema.py
docs/: PCB_DATASET 데이터 설명.md  python 가상환경이란.md  uv 로 새 프로젝트 시작하기.md  강의 내용.md  실습 순서.md
examples/: inference_onnx.py  ml_object_detector_demo.ipynb  ml_object_detector_demo.py  mlflow_object_detection.py
experiments/: 01_zero_shot_inference.py  e00_grounddino_zero_shot_inference.py  e00_zero_shot_inference.py  e01_detr_pre_trained_model.py  e01_zero_shot_inference.py  e02_yolo_pre_trained_model.py  e02_yolo_pretrained_model.py  e03_eda_pcb_data.ipynb  e03_eda_pcb_data.py  e04_deted_pcb_data_with_prepared_models.md  pyproject.toml  utils.py
experiments/eda/: README.md  e03_eda_pcb_data.ipynb  e03_eda_pcb_data.py  eda_pcb_data.ipynb  eda_pcb_data.py  pyproject.toml
experiments/exp01_train_yolo/: README.md  prepare_yolo_dataset.py  pyproject.toml  split_pcb_dataset.py  train_yolo.py  train_yolo_hydra.py
experiments/exp01_train_yolo/conf/: scratch_config.yaml  test_config.yaml  transfer_config.yaml
experiments/exp02_train_yolo/: README.md  pyproject.toml  train_yolo_hydra.py
experiments/exp02_train_yolo/conf/: default_config.yaml  fasttest_config.yaml
experiments/exp05/: README.md  split_pcb_dataset.py  train_detr.py  train_yolo.py
experiments/exp05_train_yolo/: README.md  benchmark_yolo_onnx.py  export_yolo_onnx.py  split_pcb_dataset.py  train_yolo.py  train_yolo_hydra.py
experiments/exp05_train_yolo/conf/: config.yaml  default_config.yaml  fasttest_config.yaml
experiments/exp06_train_detr/: README.md  split_pcb_dataset.py  split_pcb_dataset_coco.py  train_detr_hydra.py
experiments/exp06_train_detr/conf/: config.yaml  default_config.yaml  fasttest_config.yaml
experiments/test_latest_models/: README.md  detr_pre_trained_model.py  grounddino_zero_shot_inference.py  pyproject.toml  utils.py  yolo_pre_trained_model.py
scripts/: README.md  azblob_lite.py  benchmark_models.py  check_project_setup.py  convert_pt_to_onnx.py  dbx_volumes.py  download_data_from_kaggle.py  download_files.py  download_model_from_run.py  download_models_from_huggingface.py  predict_with_registered_model.py  register_yolo_model.py  register_yolo_onnx_model.py  upload_files.py  upload_yolo_weights_to_run.py
