[project]
name = "ml-workflow-object-detection-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adlfs>=2025.8.0",
    "kaggle>=1.8.3",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.11",
    "typer>=0.21.1",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.uv.workspace]
members = ["packages/ml-object-detector", "experiments"]

[tool.uv.sources]
ml-object-detector = { workspace = true }
