[project]
name = "ml-workflow-object-detection-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "onnxruntime>=1.23.2",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.11",
    "typer>=0.21.1",
    "ml_object_detector>=0.1.0",
    "databricks-sdk>=0.78.0",
    "onnx>=1.20.1",
    "tqdm>=4.67.1",
    "rich>=14.3.1",
]

[dependency-groups]
apps = [
    "streamlit>=1.53.1",
]
dev = [
    "ipykernel>=7.1.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]
experiments = [
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "omegaconf>=2.3.0",
    "opencv-python>=4.13.0.90",
    "timm>=1.0.24",
    "torch>=2.9.1",
    "transformers>=5.0.0",
    "ultralytics>=8.4.8",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.uv.workspace]
members = [
    "packages/*"
]

[tool.uv.sources]
ml-object-detector = { workspace = true }
