[project]
name = "experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pillow>=12.1.0",
    "polars>=1.37.1",
    "protobuf>=6.33.4",
    "timm>=1.0.24",
    "torch>=2.9.1",
    "transformers>=4.57.5",
    "typer>=0.21.1",
    "ultralytics>=8.4.3",
]
