[project]
name = "object-detection-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ml-object-detector>=0.1.0",
    "streamlit>=1.53.1",
]

[tool.uv.workspace]
members = [
    "../../packages/ml-object-detector"
]

[tool.uv.sources]
ml-object-detector = { workspace = true }
