[project]
name = "exp01-train-yolo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlflow>=3.8.1",
    "numpy>=2.4.1",
    "python-dotenv>=1.2.1",
    "typer>=0.21.1",
    "ultralytics>=8.4.8",
]

[tool.uv.workspace]
members = ["packages/*"]
