[project]
name = "exp02-train-yolo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.2",
    "mlflow>=3.8.1",
    "numpy>=2.4.1",
    "omegaconf>=2.3.0",
    "typer>=0.21.1",
    "ultralytics>=8.4.8",
]

[tool.uv.workspace]
members = ["packages/*"]