[project]
name = "test-latest-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.57.6",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.uv.workspace]
members = ["packages/*"]

