[project]
name = "test-latest-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "common-utils",
    "matplotlib>=3.10.8",
    "timm>=1.0.24",
    "torch>=2.10.0",
    "transformers>=4.57.6",
    "ultralytics>=8.4.6",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"
